fixed missing pic

--- a/青椒炒肉.md
+++ b/青椒炒肉.md
@@ -66,7 +66,7 @@
 - 猪肩肉切丝，刀工好，刀锋利的可以将猪肩肉横切一半后切丝，我是直接顺着肉的纹理切成厚厚的细丝
 - 青椒切丝，可以稍微切厚一点，曼城能买到的大部分青椒是没有辣味的彩椒，切厚一点口感好
 - 使用1勺料酒，1勺生抽，0.5勺老抽，适量白胡椒粉和淀粉腌制肉丝
-- 热锅，锅内放入 10ml - 15ml 食用油，油热后下入一勺豆瓣酱炒出红油
+- 热锅，锅内放入适量食用油，油热后下入一勺豆瓣酱炒出红油
 - 将肉丝倒入锅中翻炒至变色，确认熟后盛到碗里备用，再下入青椒炒至断生即可，***青椒和肉丝一定要分开炒***
 - 将肉丝回锅，再加入调好的酱汁翻炒一会，焖煮1-3分钟即可出锅，我个人偏好多煮一会让青椒软烂入味
 
@@ -74,8 +74,8 @@
 
 <!-- 在这里额外补充一些注意事项、参考资料、安全须知等。 -->
 
-- 猪肩肉在各大超市均可买到，我个人尝试过 M & S 和 ALDI 的猪肩肉，个人感觉 M & S 的猪肩肉相对来说口感和腥味表现都比较好，售价也只要4磅，性价比相当不错
-- 青椒我选用的是Vita楼下 1家 中超卖的青椒，平均价格在0.7磅一个，在各大超市售卖的英国彩椒应该会有相同的效果，我在 ALDI 购买了一包青椒，下次再做此菜时会试验一下是否有相同效果
+- 猪肩肉在各大超市均可买到，我个人尝试过 *M&S* 和 *ALDI* 的猪肩肉，个人感觉 *M&S* 的猪肩肉相对来说口感和腥味表现都比较好，售价也只要 **4 磅**，性价比相当不错
+- 青椒我选用的是 *Vita* 楼下 *1家* 中超卖的青椒，平均价格在 **0.7 磅 1 个**，在各大超市售卖的英国彩椒应该会有相同的效果，我在 *ALDI* 购买了一包青椒，下次再做此菜时会试验一下是否有相同效果
 - 参考资料：[米饭高光时刻！青椒肉丝这么做，米饭三碗起步！](https://www.bilibili.com/video/BV1hq4y1L7G9)
 
 <!-- 必须保留下面的文字。 -->
