--- a/菜谱本体/水煮肉片.md
+++ b/菜谱本体/水煮肉片.md
@@ -5,7 +5,7 @@
 ## 必备原料和工具
 
 - 五花肉（Pork Belly)
-- 大白菜（或者叫白菜或者叫很大的娃娃菜或者你想吃的绿色的菜）
+- 大白菜（或者叫白菜或者叫很大的娃娃菜或者你想吃的菜叶子）
 - 火锅底料/麻辣香锅底料/水煮肉片料[3选1即可]
 - 豆芽[可选]
 - 千张（或者叫豆皮）[可选]
@@ -22,7 +22,7 @@
 
 - 五花肉直接垂直于有纹理的方向切片，切的不要太薄，个人感觉约 0.2 cm厚左右即可
 - 打一个鸡蛋取出蛋黄 ~~（怎么取是你自己想办法）~~，加适量白胡椒粉和盐，1 勺生抽，1 勺料酒，1 勺蚝油，并将蛋清倒入肉中，顺着同一个方向搅拌均匀后加少许水淀粉抓匀腌制肉片 15 分钟
-- 锅中下入 20 - 25 ml食用油，油热后下入豆瓣酱炒匀，然后下入绿色的菜叶子翻炒至断生，途中可以加少许盐调味，然后装在碗底
+- 锅中下入 20 - 25 ml食用油，油热后下入豆瓣酱炒匀，然后下入菜叶子翻炒至断生，途中可以加少许盐调味，然后装在碗底
 - 锅中倒入料包炒香（如果不能吃辣的建议使用半包料，后续加盐、味精和豆瓣酱调味），再加入适量热水（冷水亦可，需要等待的时间更长）直至煮沸，如有千张先下入后煮软捞出铺在菜叶子上，然后下入肉片，肉片稍微烫煮至变色即可，否则肉片会吃起来相对不嫩
 - 捞出肉片铺在碗顶部，然后倒入汤汁，另起锅烧热油（约 1 - 2 分钟），将油淋在肉片上
 
