--- a/菜谱本体/水煮肉片.md
+++ b/菜谱本体/水煮肉片.md
@@ -26,7 +26,7 @@
 - 锅中倒入料包炒香（如果不能吃辣的建议使用半包料，后续加盐、味精和豆瓣酱调味），再加入适量热水（冷水亦可，需要等待的时间更长）直至煮沸，如有千张先下入后煮软捞出铺在菜叶子上，然后下入肉片，肉片稍微烫煮至变色即可，否则肉片会吃起来相对不嫩
 - 捞出肉片铺在碗顶部，然后倒入汤汁，另起锅烧热油（约 1 - 2 分钟），将油淋在肉片上
 
-## 附加内容
+<h2 id="1">附加内容</h2> 
 
 - Pork Belly 也是在各大超市有售，我个人尝试过 *TESCO* 和 *ALDI* 的，价格约在 **3 磅** - **3.5 磅** 之间，*ALDI* 的五花肉相对来说血水多很多，应该也等同于腥很多，但是由于我在处理肉片之前提前将五花肉浸泡在水中，捞出后挤出部分血水并放在厨房纸上吸去了部分血水，最终感觉差别并不大
 - 厨友尝试过 *Sainsbury* 售卖的猪五花，价格和 *TESCO* 相当，疑似品质更不错，因为她没有抱怨这个肉有味道，而且我肉眼观察上去 *Sainsbury* 的肉颜色更白，疑似血水更少，下次我会尝试一下并做对比
