--- a/菜谱本体/家常豆腐煲.md
+++ b/菜谱本体/家常豆腐煲.md
@@ -1,13 +1,13 @@
 # 家常豆腐煲
 
-这是我最爱吃的一道菜，也是个人感觉最简单的一道菜
+本质上是煎豆腐大乱炖，还可以
 
 ## 必备原料和工具
 
 - 豆腐
 - 大白菜（或者叫白菜或者叫很大的娃娃菜）
 - 五花肉（Pork Belly）
-- 尖辣椒 （Chilly）
+- 尖辣椒（Chilly）
 - 鸡蛋
 ## 模糊计算
 
