更正了错字

--- a/菜谱本体/家常豆腐煲.md
+++ b/菜谱本体/家常豆腐煲.md
@@ -37,7 +37,7 @@
 ## 附加内容
 
 - 豆腐最好选用嫩豆腐，我是用老豆腐煎的，感觉煎出来表皮虽然有点感觉但是内部还是缺点口感，下次我用嫩豆腐试试，另外感觉必须切的足够薄但是又不能太薄，我第一次做就感觉有点厚了，这个要自己有点直觉在
-- 我在 *辣妹子* 中超分别购入了老豆腐和嫩豆腐，老豆腐是重量 450 g 的永安豆腐，价格为 **1.45 磅**，嫩豆腐是重量 400 g 的永安豆腐，价格为 **1.65 磅**
+- 我在 *辣妹子中超* 分别购入了老豆腐和嫩豆腐，老豆腐是重量 450 g 的永安豆腐，价格为 **1.45 镑**，嫩豆腐是重量 400 g 的永安豆腐，价格为 **1.65 镑**
 - Pork Belly 和 大白菜 的相关内容见[水煮肉片](https://github.com/KatouMegumii/HowToCook_in_Manchester/blob/master/%E8%8F%9C%E8%B0%B1%E6%9C%AC%E4%BD%93/%E6%B0%B4%E7%85%AE%E8%82%89%E7%89%87.md)
 - 参考资料：[秋天已来，给爱的人炖一锅暖呼呼的白菜豆腐煲，低脂暖胃，鲜香入味。10分钟搞定且不贵！](https://www.bilibili.com/video/BV1JP411E7Bq)
 
