--- a/菜谱本体/青椒炒肉.md
+++ b/菜谱本体/青椒炒肉.md
@@ -34,8 +34,8 @@
 
 ## 附加内容
 
-- 猪肩肉在各大超市均可买到，我个人尝试过 *M&S* 和 *ALDI* 的猪肩肉，个人感觉 *M&S* 的猪肩肉相对来说口感和腥味表现都比较好，售价也只要 **4 磅**，性价比相当不错，由于我本人对猪肉的腥味没有十分敏感，在尝试了 *ALDI* 的猪肩肉之后我觉得似乎也是可以用的，售价为 **3.19 磅**
-- 青椒我选用的是 *Vita* 楼下 *1家* 中超卖的青椒，平均价格在 **0.7 磅 1 个**，在各大超市售卖的英国彩椒应该会有相同的效果，我在 *ALDI* 购买了一包青椒，~~下次再做此菜时会试验一下是否有相同效果~~ 已经试了一下，发现好像 *ALDI* 的青椒相比较而言更厚，更难断生和入味，但其实没有本质区别，也可以使用他们的青椒
+- 猪肩肉在各大超市均可买到，我个人尝试过 *M&S* 和 *ALDI* 的猪肩肉，个人感觉 *M&S* 的猪肩肉相对来说口感和腥味表现都比较好，售价也只要 **4 镑**，性价比相当不错，由于我本人对猪肉的腥味没有十分敏感，在尝试了 *ALDI* 的猪肩肉之后我觉得似乎也是可以用的，售价为 **3.19 镑**
+- 青椒我选用的是 *Vita* 楼下 *1家中超* 卖的青椒，平均价格在 **0.7 镑 1 个**，在各大超市售卖的英国彩椒应该会有相同的效果，我在 *ALDI* 购买了一包青椒，价格为 **0.9 镑 4 个**，~~下次再做此菜时会试验一下是否有相同效果~~ 已经试了一下，发现好像 *ALDI* 的青椒相比较而言更厚，更难断生和入味，但其实没有本质区别，也可以使用他们的青椒
 - 参考资料：[米饭高光时刻！青椒肉丝这么做，米饭三碗起步！](https://www.bilibili.com/video/BV1hq4y1L7G9)
 
 如果您遵循本指南的制作流程而发现有问题或可以改进的流程，请提出 Issue 或 Pull request 。
