--- a/菜谱本体/炖鸡汤.md
+++ b/菜谱本体/炖鸡汤.md
@@ -33,6 +33,8 @@
 - 整鸡我是在 *M & S* 购入的，整鸡一般分为三个档次，足够 3 - 4 人食用的中号，足够 6 - 8 人食用的大号，还有特大号鸡，*M & S* 的整鸡是按照重量计费的，越大的型号的鸡单价月底，我使用的是中号鸡，价格在 **5.5 镑 - 6.5 镑** 不等
 - 除此之外好像还有一种玉米喂养的鸡，买鸡的时候听到旁边的人说好像肉质口感都会更好，下次有机会的时候可以试试
 - *Lidl* 和 *ALDI* 都有整鸡售卖，他们是按照型号统一定价，中号鸡在这两家的价格约为 **3.5 镑**，但我还没有尝试过，有机会也可以试试
-- 参考资料：[米饭高光时刻！青椒肉丝这么做，米饭三碗起步！](https://www.bilibili.com/video/BV1hq4y1L7G9)
+- 参考资料：
+- [熬鸡汤最常见的三个问题](https://www.bilibili.com/video/BV1wT4y1S7eg)
+- [炖鸡汤怎么做清亮又滋补？大厨教你正确做法，不腥不柴，满屋飘香](https://www.bilibili.com/video/BV1pg4y1673Q)
 
 如果您遵循本指南的制作流程而发现有问题或可以改进的流程，请提出 Issue 或 Pull request 。
