--- a/菜谱本体/炖鸡汤.md
+++ b/菜谱本体/炖鸡汤.md
@@ -30,7 +30,7 @@
 
 ## 附加内容
 
-- 整鸡我是在 *M & S* 购入的，整鸡一般分为三个档次，足够 3 - 4 人食用的中号，足够 6 - 8 人食用的大号，还有特大号鸡，*M & S* 的整鸡是按照重量计费的，越大的型号的鸡单价月底，我使用的是中号鸡，价格在 **5.5 镑 - 6.5 镑** 不等
+- 整鸡我是在 *M & S* 购入的，整鸡一般分为三个档次，足够 3 - 4 人食用的中号，足够 6 - 8 人食用的大号，还有特大号鸡，*M & S* 的整鸡是按照重量计费的，越大的型号的鸡单价越低，我使用的是中号鸡，价格在 **5.5 镑 - 6.5 镑** 不等
 - 除此之外好像还有一种玉米喂养的鸡，买鸡的时候听到旁边的人说好像肉质口感都会更好，下次有机会的时候可以试试
 - *Lidl* 和 *ALDI* 都有整鸡售卖，他们是按照型号统一定价，中号鸡在这两家的价格约为 **3.5 镑**，但我还没有尝试过，有机会也可以试试
 - 参考资料：
