--- a/菜谱本体/炖鸡汤.md
+++ b/菜谱本体/炖鸡汤.md
@@ -22,7 +22,7 @@
 
 - 整鸡可以切也可以不切，如果你的锅足够大可以尝试不切直接炖，炖出来的肉还可以做一道手撕鸡
 - 不管切或者不切，都要去掉鸡翅尖，鸡爪尖和鸡屁股，否则会导致炖出来的汤比较腥
-- 然后撒适量盐，约 3 分钟 后给鸡肉按个摩，加入适量温水浸泡 10 分钟 左右，将血水逼出，水龙头保持常开，用清水清洗鸡肉至无明显血水
+- 然后撒适量盐给鸡肉按个摩，约 3 分钟 后加入适量温水浸泡 10 分钟 左右，将血水逼出，水龙头保持常开，用清水清洗鸡肉至无明显血水
 - 锅中加入比你想喝的汤的量多 20% 的热水烧开（或者直接加入开水）水开后下入鸡肉，等待水再次烧开撇去浮沫
 - 如果第一步清洗血水不到位的话就会和我一样有比较多的浮沫，需要一直清理浮沫保持鸡汤清亮
 - 加入姜片，转中小火，保持汤中微微有气泡冒出的状态，炖煮 1 - 2 小时
