--- a/菜谱本体/炖鸡汤.md
+++ b/菜谱本体/炖鸡汤.md
@@ -9,6 +9,8 @@
 - 鸡肉
 - 生姜
 - 热水
+- 盐
+- 白胡椒粉（可选）
 
 ## 模糊计算
 
@@ -17,6 +19,7 @@
 - 整鸡 0.5 只 / 1 只 （视锅的大小决定，最好是 1 只）
 - 姜片 2 - 5 片
 - 热水 0.8 锅
+- 盐 适量
 
 ## 操作
 
@@ -27,6 +30,7 @@
 - 如果第一步清洗血水不到位的话就会和我一样有比较多的浮沫，需要一直清理浮沫保持鸡汤清亮
 - 加入姜片，转中小火，保持汤中微微有气泡冒出的状态，炖煮 1 - 2 小时
 - 途中最好不要加水，如需加水一定要加热水，若要盖盖子炖煮，注意调小火力以免锅中沸腾导致鸡汤浑浊
+- 炖煮结束后，在食用鸡汤前加入适量盐调味即可，如果喜欢吃胡椒味也可以加入适量白胡椒粉
 
 ## 附加内容
 
